# WAX-AI

./: .env.example  Makefile  README.md  pyproject.toml
app/: __init__.py  config.py
app/data/: __init__.py
app/data/data_types/: __init__.py  base.py  ski_model.py  test_session.py  wax_product.py
app/data/database/: connection.py  init_db.py  session.py
models/: .gitkeep
notebooks/: 01-jn-example.ipynb
src/: config.py  dataset.py  features.py  hello.py  plots.py
src/modeling/: __init__.py  predict.py  train.py
